--- a/src/main/resources/templates/edit-blog.html
+++ b/src/main/resources/templates/edit-blog.html
@@ -11,20 +11,20 @@
         <input type="hidden" th:field="*{id}">
         <div class="form-group">
             <label>Title: </label>
-            <input class="form-control" type="text" th:object="*{title}">
-            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('title')}" th:errors="*{Blog.title}"></p>
+            <input class="form-control" type="text" th:object="*{blog.title}">
+            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('title')}" th:errors="*{blog.title}"></p>
         </div>
 
         <div class="form-group">
             <label>Cover: </label>
-            <input class="form-control" type="text" th:field="*{cover}">
-            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('cover')}" th:errors="*{cover}"></p>
+            <input class="form-control" type="text" th:field="*{blog.cover}">
+            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('cover')}" th:errors="*{blog.cover}"></p>
         </div>
 
         <div class="form-group">
             <label>Content: </label>
-            <textarea  class="form-control" th:field="*{content}"></textarea>
-            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></p>
+            <textarea  class="form-control" th:field="*{blog.content}"></textarea>
+            <p style="color: #9dfa9e" th:if="${#fields.hasErrors('content')}" th:errors="*{blog.content}"></p>
         </div>
 
         <button class="btn btn-info" type="submit">Edit</button>
